tests/errortests/arrayaccess.txt
FILENAME:14:13: error: the array index is not in the defined range.
    writeln(val[0]);
            ^-------
